Add head, body, html tag

--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 
-<title>My First Website </title>
-<meta charset="utf-8">
+<html>
+    <head>
+        <title>My First Website </title>
+        <meta charset="utf-8">
+        <style>
+            h1 {
+                font-size: 64px;
+                text-align: center;
+            }
+            
+            h3 {
+                margin-top: 100px;
+            }          
+            
+            p i {
+                font-size: 48px;          
+            }
+        </style>
+    </head>
 
-<h1>My Fitst Page</h1>
-<h2>I <i>love</i> HTML!</h2>
-<h3>안녕 세상!</h3>
+    <body>
+        <h1>My Fitst Page</h1>
+        <h2>I <i>love</i> HTML!</h2>
+        <h3>안녕 세상!</h3>
 
-<p>Loremm ipsum <b>dolor</b> sit amet, consectetur adipiscing
-elit, sed do eiusmod <i>tempor</i> incididunt ut labore et
-dolore magna aliqua.</p>
-
-<style>
-h1 {
-    font-size: 64px;
-    text-align: center;
-}
-
-h3 {
-    margin-top: 100px;
-}
-
-
-p i {
-    font-size: 48px;
-
-
-}
-</style>
+        <p>Loremm ipsum <b>dolor</b> sit amet, consectetur adipiscing
+        elit, sed do eiusmod <i>tempor</i> incididunt ut labore et
+        dolore magna aliqua.</p>
+    </body>
+</html>
