--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
         <p>Loremm ipsum <b>dolor</b> sit amet, consectetur adipiscing
         elit, sed do eiusmod <i>tempor</i> incididunt ut labore et
         dolore magna aliqua.</p>
+
+        <a href="https://google.com" target="_blank">구글로 가는 링크</a>
+        
+        <a href="folder1/page1.html">page 1</a>
+        <a href="folder1/folder2/page2.html">page 2</a>
     </body>
 </html>
