Add image on website

--- a/folder1/page1.html
+++ b/folder1/page1.html
@@ -10,6 +10,8 @@
         <h1>page 1</h1>
         <h2>페이지 1</h2>
 
+        <img src="../images/icecream.jpg" width="300">
+
         <a href="../index.html">index</a>
         <a href="folder2/page2.html">page2</a>
     </body>
