--- a/folder1/folder2/page3.html
+++ b/folder1/folder2/page3.html
@@ -4,12 +4,21 @@
     <head>
         <title>My First Website</title>
         <meta charset="utf-8">
+
+        <style>
+            img{
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        </style>
     </head>
 
     <body>
         <h1>page 3</h1>
         <h2>페이지 3</h2>
 
+        <img src="../../images/icecream.jpg" width="300">
         <a href="../index.html">index</a>
         <a href="folder2/page2.html">page2</a>
     </body>
