--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <h2>I <i>love</i> HTML!</h2>
         <h3>안녕 세상!</h3>
 
+        <img src="https://cdn.hellodd.com/news/photo/202005/71835_craw1.jpg" width="640">
+
         <p>Loremm ipsum <b>dolor</b> sit amet, consectetur adipiscing
         elit, sed do eiusmod <i>tempor</i> incididunt ut labore et
         dolore magna aliqua.</p>
