--- a/folder1/folder2/page3.html
+++ b/folder1/folder2/page3.html
@@ -19,7 +19,7 @@
         <h2>페이지 3</h2>
 
         <img src="../../images/icecream.jpg" width="300">
-        <a href="../index.html">index</a>
-        <a href="folder2/page2.html">page2</a>
+        <a href="../../index.html">index</a>
+        <a href="page2.html">page2</a>
     </body>
 </html>
