--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>My First Website </title>
         <meta charset="utf-8">
+        <link href="css/styles.css" rel=>
         <style>
             h1 {
                 font-size: 64px;
@@ -21,7 +22,7 @@
     </head>
 
     <body>
-        <h1>My Fitst Page</h1>
+        <h1>My First Page</h1>
         <h2>I <i>love</i> HTML!</h2>
         <h3>안녕 세상!</h3>
 
